<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/llUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_uno"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/blue"/>
        <ImageButton
            android:id="@+id/imgSambil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sambilmargarita" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/llUno"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_dos"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/blue"/>
        <ImageButton
            android:id="@+id/imgLavela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/lavela"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/llDos"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_tres"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/blue"/>
        <ImageButton
            android:id="@+id/imgPlaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/playaelagua"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/llTres"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_cuatro"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/blue"/>
        <ImageButton
            android:id="@+id/imgIglesia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/iglesiaelvalle"/>
    </LinearLayout>

</RelativeLayout>